# OpenGL-tutorial

./: CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  camera.h  fragment-shader.fs  fragment-shader.txt  main.cpp  shader.h  triangle.cpp  triangle.h  vertex-shader.vs
